# ProzProgProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.bat  winmkdir.bat  winrmdir.bat
resource/font/: SevenSegment.sfd
src/include/: application_manager.h  asset_manager.h  event_dispatcher.h  event_handling.h  game.h  game_manager.h  game_math.h  game_util.h  input.h  keyboard_event.h  linked_list.h  menu_manager.h  render.h  sdl_error_handler.h  window_event.h
src/source/: application_manager.c  asset_manager.c  event_handling.c  game.c  game_manager.c  game_math.c  game_util.c  linked_list.c  main.c  menu_manager.c  sdl_error_handler.c
src/source/event/: event_dispatcher.c  keyboard_event.c  window_event.c
